--- a/clean-and-process/src/old_stuff/panel-data.Rmd
+++ b/clean-and-process/src/old_stuff/panel-data.Rmd
@@ -263,7 +263,95 @@ final_vars <-
            month = as.factor(month(month))) %>%
     left_join(crime, by = c("month", "year", "unit")) %>%
     mutate(violent_cr_capita = violent_cr / total_pop * 1000,
-           property_cr_capita = property_cr / total_pop * 1000)
+           property_cr_capita = property_cr / total_pop * 1000,
+           year = fct_drop(year))
+```
+
+## Estimate models better
+
+### let's look at the descriptives first
+
+```{r}
+ggplot(final_vars, aes(y = black_stops / black, x = black_ratio)) + 
+    geom_point() +
+    theme_bw()
+
+ggplot(final_vars, aes(y = black_stops / black, x = black_ratio)) + 
+    geom_point(aes(color = unit)) +
+    geom_smooth(method = MASS::glm.nb, formula = y ~ x, se = F) +
+    theme_bw()
+
+ggplot(final_vars, aes(y = black_stops / black, x = black_ratio)) + 
+    geom_point(aes(color = year)) +
+    facet_wrap(~unit, scales = "free") +
+    geom_smooth(method = MASS::glm.nb, formula = y ~ x, se = F) +
+    theme_bw()
+```
+
+## Trying to follow along with the example
+
+```{r}
+library(lme4)
+
+test <-
+    final_vars %>%
+    group_by(unit) %>%
+    mutate(black_diff_between = mean(black_diff),
+           black_diff_within = black_diff - black_diff_between)
+
+m1 <- MASS::glm.nb(black_stops ~ black_diff + year + offset(log(black)), data = final_vars)
+m2 <- MASS::glm.nb(black_stops ~ 0 + black_diff_within + year + offset(log(black)) + unit, data = test)
+m3 <- MASS::glm.nb(black_stops ~ black_diff_between + year + offset(log(black)), data = test)
+m4 <- glmer(black_stops ~ black_diff_between + black_diff_within + year +  offset(log(black)) + (1 | unit),
+            data = test,
+            family = MASS::negative.binomial(theta = summary(mass_pack)$theta))
+m5 <- glmer(black_stops ~ black_diff_between + black_diff_within + year +  offset(log(black)) + (1 + black_diff_within | unit),
+            data = test,
+            family = MASS::negative.binomial(theta = summary(mass_pack)$theta))
+```
+
+
+### fixed effects model
+
+```{r}
+library(plm)
+library(pglm)
+library(MASS)
+library(lme4)
+library(fixest)
+library(lmtest)
+library(sandwich)
+library(parameters)
+
+lme4_pack <-
+    glmer(black_stops ~ black_diff + violent_cr_capita + property_cr_capita +
+                log_total_officers + unit + year + offset(log(black)) + year + (1 | unit),
+             data = final_vars,
+             family = MASS::negative.binomial(theta = summary(mass_pack)$theta))
+
+final_vars_pdata <-
+    final_vars %>%
+    mutate(time = paste0(year, "-", month)) %>%
+    pdata.frame(index = c("unit", "time"))
+
+pglm_pack <-
+    pglm(black_stops ~ black_diff + violent_cr_capita + property_cr_capita +
+                      log_total_officers + offset(log(black)) + year,
+         data = final_vars_pdata,
+         family = poisson,
+         model = "random")
+
+fixest_pack <-
+    femlm(black_stops ~ black_diff + violent_cr_capita + property_cr_capita +
+                 log_total_officers + year + offset(log(black)) | unit,
+             data = final_vars, family = "poisson")
+
+mass_pack <- 
+    glm.nb(black_stops ~ 0 + black_diff+ violent_cr_capita + property_cr_capita +
+               log_total_officers + unit + year + offset(log(black)),
+           data = final_vars)
+cluster_matrix <- vcovCL(mass_pack, cluster = ~unit)
+cluster_coefs <- coeftest(mass_pack, vcov = cluster_matrix)
 ```
 
 ## Estimate models
