--- a/clean-and-process/src/old_stuff/regression_analysis.Rmd
+++ b/clean-and-process/src/old_stuff/regression_analysis.Rmd
@@ -34,10 +34,11 @@ final_vars <-
            log_black = log(black),
            property_cr_capita = property_cr * 10000 / total_pop,
            violent_cr_capita = violent_cr * 10000 /  total_pop,
-           mean_years_exp = mean_days_exp / 365)
+           mean_years_exp = mean_days_exp / 365,
+           mean_years_worked_unit = mean_months_worked_unit / 12)
 ```
 
-## Corrrelationx Matrix
+## Corrrelation Matrix
 
 ```{r}
 corr_vars <-
@@ -268,7 +269,6 @@ modelsummary(list("Stops of Black Civilians" = between_within_count,
              notes = c("Standard Errors in parentheses. Coefficients are incident rate ratios.",
                        "P-values are denoted by symbols: + p < 0.1, * p < 0.05, ** p < 0.01, *** p < 0.001"))
 ```
-
 
 ```{r, results = "asis"}
 fixest_cluster_nb_basic <-
